2005-07-20  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: cmd_cleanup: also accept less-technical mode names.
	cleanup_debs: improved diagnostics.

2005-07-20  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: cleanup requires one or more modes. Move
	constant-valued conditional checks out of a File::Find function.

2005-07-20  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: cleanup_* display file-lists also if verbosity>1

2005-07-20  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: Overhaul cmd_cleanup: cmdline opts control what is
	cleaned; move each type of cleaning into its own cleanup_*
	function; implement --dry-run

2005-07-19  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Configure.pm: Forward-port the obsolete-mirrors handling.

2005-07-17  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: ...but don't break continuation option.

2005-07-16  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Make failed unpacking of source a fatal error.

2005-07-13  Daniel Macks  <dmacks@netspace.org>

	* CLI.pm: Improve POSIX symbol imports.

2005-07-13  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Bootstrap.pm: Support 10.4.2.

2005-07-13  Daniel Macks  <dmacks@netspace.org>

	* CLI.pm: flush STDIN before reading each user input.

2005-07-12  Matthew Sachs  <msachs@apple.com>

	* Services.pm: Looser checking of GCC version in enforce_gcc;
	we don't want to differentiate between 4.0.0 and 4.0.1.

2005-07-12  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Bootstrap.pm: Install exactly the version that's being injected.

2005-07-12  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Services.pm: Reimplement Repair Permissions bug fix using gcc_select
	--force, for better reliability (we hope!)

2005-07-11  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* PkgVersion.pm: Note g++-wrapper code duplication.

2005-07-11  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Bootstrap.pm: Put path-prefix	stuff in Fink's .deb.
